--- a/package.json
+++ b/package.json
@@ -6,14 +6,22 @@
   "author": "Leonardo Souza Santana",
   "scripts": {
     "dev": "nodemon src/server.js",
-    "dev:debug": "nodemon --inspect src/server.js"
+    "dev:debug": "nodemon --inspect src/server.js",
+    "queue": "nodemon src/queue.js"
   },
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bee-queue": "^1.2.3",
+    "crypto": "^1.0.1",
+    "date-fns": "^2.9.0",
     "editorconfig": "^0.15.3",
     "express": "^4.17.1",
+    "express-handlebars": "^3.1.0",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
+    "nodemailer": "^6.4.2",
+    "nodemailer-express-handlebars": "^3.1.0",
     "path": "^0.12.7",
     "pg": "^7.18.1",
     "sequelize": "^5.21.3",
